# nativebreak

./: .gitignore  .project  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/nativebreak/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/nativebreak/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nativebreak/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativecatch/: .project  build.gradle
nativecatch/src/androidTest/java/com/gac/nativelib/: ExampleInstrumentedTest.java
nativecatch/src/main/: AndroidManifest.xml
nativecatch/src/main/androidcatch/: CMakeLists.txt  catchbreak.cpp  catchbreak.h  cmakeAndroid.sh  compile_commands.json  crash.sh  log.h  native-bridge.cpp  native-bridge.h  readMe
nativecatch/src/main/java/com/gac/nativelib/: NativeCatch.java
nativecatch/src/test/java/com/gac/nativelib/: ExampleUnitTest.java
testcrash/: .project  build.gradle
testcrash/src/androidTest/java/com/test/crash/: ExampleInstrumentedTest.java
testcrash/src/main/: AndroidManifest.xml
testcrash/src/main/cpp/: CMakeLists.txt  test_crash_jni.cpp  test_crash_jni.h
testcrash/src/main/java/com/test/crash/: TestCrash.java
(+1 files in other folders)
